<?xml version="1.0"?>
<package>
  <name>path_tracker</name>
  <version>0.1.0</version>
  <description>Simple path follower</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>

  <url type="website">http://github.com/tado-aev/path_tracker</url>

  <author email="kojima@rm.is.tohoku.ac.jp">Shotaro Kojima</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>

  <export>
  </export>
</package>